# ratkit

./: Cargo.toml  README.md  justfile  skills-lock.json
.agents/skills/nexus/: SKILL.md
.agents/skills/nexus/context-driven-development/: SKILL.md
.agents/skills/nexus/skill-from-codebase/: SKILL.md
.agents/skills/software-enginering/: SKILL.md
.agents/skills/software-enginering/e2e-tests/: SKILL.md
.agents/skills/software-enginering/nextjs/: SKILL.md
.agents/skills/software-enginering/pnpm/: SKILL.md
.agents/skills/software-enginering/python/: SKILL.md
.agents/skills/software-enginering/rust/: SKILL.md
.github/workflows/: pages.yml
.nexus/: config.json
.nexus/ai_harness/: Constitution.md
.nexus/ai_harness/commands/: browser-test.md  nexus-code-with-ralph.md  nexus-code.md  nexus-context-create.md  nexus-context-from-code.md  nexus-context-generate-red-tests.md  nexus-context-review.md  nexus-context-search.md  nexus-context-sync-from-chat.md  nexus-context-sync-with-code.md  nexus-context-update.md  nexus-context-validate-unstaged.md  nexus-create-skill-from-codebase.md  nexus-explore-critique.md  nexus-explore-investigate.md  nexus-git-commit.md  nexus-marketplace-fumadocs-sync.md  nexus-prompt-augment.md
.nexus/ai_harness/rules/justfile/: SKILL.md
.nexus/ai_harness/skills/context-driven-development/: SKILL.md
.nexus/commands/: nexus-1.3-context-sync.md
.nexus/context/fumadocs/: ZDO_001-docs-home-foundation.md  ZDO_002-internal-layout-and-toc.md  ZDO_003-code-docs-auto-sync.md  ZDO_004-gh-pages-publication.md  index.md
.nexus/context/fumadocs/_reference/: docs-code-sync-blueprint.md  docs-implementation-blueprint.md  docs-ui-components-reference.md  fumadocs-default-patch-pack.md  fumadocs-default-stack.md
.nexus/orchestration/: pipelines.json
.opencode/command/: nexus-code-with-ralph.md  nexus-code.md  nexus-context-create.md  nexus-context-from-code.md  nexus-context-generate-red-tests.md  nexus-context-review.md  nexus-context-search.md  nexus-context-sync-from-chat.md  nexus-context-sync-with-code.md  nexus-context-update.md  nexus-context-validate-unstaged.md  nexus-create-skill-from-codebase.md  nexus-explore-critique.md  nexus-explore-investigate.md  nexus-git-commit.md  nexus-marketplace-fumadocs-sync.md  nexus-prompt-augment.md
.opencode/rules/: justfile
.opencode/skills/: context-driven-development
_archives/ratatui-toolkit/: Cargo.toml  README.md
_archives/ratatui-toolkit/src/: lib.rs
docs/: README.md  mdx-components.tsx  next.config.mjs  package-lock.json
docs/api/core/: events.md  focus.md  index.md  layout_coordinator.md  mouse_router.md  registry.md  runner.md  types.md
docs/app/: global.css  layout.tsx  middleware.ts
docs/app/api/search/: route.ts
docs/app/docs/[[...slug]]/: page.tsx
docs/app/examples/[[...slug]]/: page.tsx
docs/app/llms.mdx/: route.ts
docs/app/og/docs/[...slug]/: route.tsx
docs/components/: examples-grid.tsx  hero.tsx  navbar.tsx  page-actions.tsx  theme-toggle.tsx
docs/components/ui/: badge.tsx  card.tsx
docs/content/docs/: meta.json
docs/content/docs/(get-started)/: basic-usage.mdx  index.mdx  installation.mdx  meta.json
docs/content/docs/primitives/: button.mdx  dialog.mdx  index.mdx  menu-bar.mdx  meta.json  pane.mdx  resizable-grid.mdx  scroll.mdx  statusline.mdx  termtui.mdx  toast.mdx  tree-view.mdx  widget-event.mdx
docs/content/docs/services/: file-watcher.mdx  git-watcher.mdx  hotkey-service.mdx  index.mdx  meta.json  repo-watcher.mdx
docs/content/docs/widgets/: ai-chat.mdx  code-diff.mdx  file-system-tree.mdx  hotkey-footer.mdx  index.mdx  markdown-preview.mdx  meta.json  theme-picker.mdx
docs/lib/: examples.ts  layout.shared.tsx
examples/: ai_chat_ai_chat_demo.rs  button_button_demo.rs  code_diff_code_diff_demo.rs  dialog_dialog_demo.rs  file_system_tree_file_system_tree_demo.rs  file_watcher_demo.rs  git_watcher_demo.rs  hotkey_footer_hotkey_footer_demo.rs  hotkey_service_demo.rs  markdown_preview_markdown_preview_demo.rs  menu-bar_menu_bar_demo.rs  pane_pane_demo.rs  repo_watcher_demo.rs  resizable-grid_resizable_grid_demo.rs  scroll_scroll_demo.rs  statusline_statusline_demo.rs  termtui_term_mprocs_demo.rs  theme_picker_theme_picker_demo.rs  toast_toast_demo.rs  tree-view_tree_view_demo.rs  widget-event_widget_event_demo.rs
justfiles/utilities/: demo-filesystem.just  docs-gh-pub.just  pub.just
skills/ratkit/: SKILL.md
src/: lib.rs
src/primitives/menu_bar/: menu_bar.rs
src/primitives/pane/: rendering.rs
src/widgets/ai_chat/: mod.rs
src/widgets/ai_chat/components/: mod.rs
src/widgets/ai_chat/components/interactive/: mod.rs  revert_banner.rs
src/widgets/ai_chat/components/message/: assistant_message.rs  compact_divider.rs  mod.rs  user_message.rs
src/widgets/ai_chat/components/parts/: mod.rs  reasoning_part.rs  text_part.rs  tool_part.rs
src/widgets/ai_chat/components/theme/: agent_colors.rs  colors.rs  mod.rs
src/widgets/ai_chat/components/tools/: block_tool.rs  generic_tool.rs  inline_tool.rs  mod.rs  tool_apply_patch.rs  tool_bash.rs  tool_codesearch.rs  tool_edit.rs  tool_glob.rs  tool_grep.rs  tool_list.rs  tool_question.rs  tool_read.rs  tool_skill.rs  tool_task.rs  tool_todo_write.rs  tool_webfetch.rs  tool_websearch.rs  tool_write.rs
src/widgets/file_system_tree/: entry.rs  widget.rs
(+16 files in other folders)
