[package]
name = "ratatui-toolkit"
version = "0.2.6"
edition = "2021"
rust-version = "1.70"
authors = ["Alpha Innovation Labs"]
description = "DEPRECATED: this crate was renamed to `ratkit`. Please migrate to `ratkit`."
documentation = "https://docs.rs/ratatui-toolkit"
repository = "https://github.com/Alpha-Innovation-Labs/ratkit"
homepage = "https://github.com/Alpha-Innovation-Labs/ratkit"
license = "MIT"
keywords = ["tui", "ratatui", "terminal", "widgets", "deprecated"]
categories = ["command-line-interface"]
readme = "README.md"

[features]
default = ["markdown", "tree", "dialog", "toast", "split", "menu", "statusline", "hotkey", "terminal", "theme"]
full = ["default", "file-tree", "theme"]

markdown = ["ratkit/markdown-preview"]
tree = ["ratkit/tree-view"]
dialog = ["ratkit/dialog"]
toast = ["ratkit/toast"]
split = ["ratkit/resizable-grid"]
menu = ["ratkit/menu-bar"]
statusline = ["ratkit/statusline"]
hotkey = ["ratkit/hotkey-footer"]
terminal = ["ratkit/termtui"]
file-tree = ["tree", "ratkit/file-system-tree"]
theme = ["ratkit/theme-picker"]

[dependencies]
ratkit = { version = "0.2.5", default-features = false }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
